ignore errors attaching anchor parts when sending mail, fixes lots of issues with fancy sig files, r=standard8, bug 714825